Working with css img

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
               </div>
               <div class="col-sm-8">
                 <div class="x_panel">
-                  <div id="myPlot" style="width: 70%; max-width: 400px;"></div>
+                  <div id="myPlot" style="width: 70%; width: 300px"></div>
                 </div>
                 <p class="title-panel">
                   2020 individual averages (Source: KFF)
@@ -401,7 +401,7 @@
       </div>
       <div class="container last-box">
         <div class="row">
-          <div class="col-sm last-box-men">
+          <div class="col-auto last-box-men">
             <img src="/src/men.png" />
           </div>
           <div class="col-sm last-box-text">
